--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${DATABASEURL}
 spring.datasource.username=${DBUSER}
 spring.datasource.password=${DBPASS}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+server.port=80
 spring.jpa.hibernate.ddl-auto=update
 
 spring.data.rest.base-path=/api
